test/src/e2e_vm_tests/test_programs/should_fail/const_block_level_no_expr/src/main.sw
script;

fn main() -> u64 {
    const X;
    0
}
